# Jaf_pose_est

./: FanelliInt.cpp  FanelliInt.h  README.md  audio_stt.cpp  audio_vad.cpp  fanelli_test.cpp  fused_intentionality.cpp  head_pose_listener.cpp  head_pose_publisher.cpp  head_shoulder_pose_publisher.cpp  head_shoulder_pose_visualizer.cpp  image_display.cpp  intent_action_client.cpp  intent_estimation.cpp  intent_estimation_action_test.cpp  intent_estimation_action_tf.cpp  kinect_audio_listener.cpp  kinect_audio_publisher.cpp  kinect_audio_recorder.cpp  kinect_face_detector.cpp  kinect_person_detector.cpp  kinect_play_back.cpp  kinect_record.cpp  main_demo.cpp  main_icme.cpp  objectsMap.cpp  objectsMap.hpp  person_detector.cpp  tpsowrapper.cpp  tpsowrapper.h  tracker_action_client.cpp
ParticleFilter/: detectiontrackassociator.cpp  detectiontrackassociator.h  gaussian.cpp  gaussian.h  gaussianmixture.cpp  gaussianmixture.h  hogpeopledetector.cpp  hogpeopledetector.h  icu_detector_base.cpp  icu_detector_base.h  main.cpp  motiondistribution.cpp  motiondistribution.h  observation.cpp  observation.h  particle.cpp  particle.h  particlefilter.cpp  particlefilter.h  particlefilter.h~  particlefilterdemonstrator.cpp  particlefilterdemonstrator.h
ParticleFilter/munkres/: munkres.cpp  munkres.h
Romeo_ParticleFilter/: person_detector.cpp
Romeo_ParticleFilter/real-pdt/: CMakeLists.txt.save  CMakeLists.txt~  Tracker.cpp  detector_seg.cpp  detector_seg.h  kinectgrabber.cpp  kinectgrabber.h
Romeo_ParticleFilter/real-pdt/fovis/: CMakeLists.txt~
Romeo_ParticleFilter/real-pdt/math/: CMakeLists.txt~
Romeo_ParticleFilter/real-pdt/segmentation_roi/: CMakeLists.txt
audio-kinect/: CMakeLists.txt  audio.c  libfreenect-audio.h  libfreenect-registration.h
cmu-sphinx/pocketsphinx/: Makefile  config.status  libtool  pocketsphinx.pc
cmu-sphinx/pocketsphinx/doc/: Makefile  doxyfile  doxytags
cmu-sphinx/pocketsphinx/doc/html/: acmod_8c.html  acmod_8c.js  acmod_8c_source.html  acmod_8h.html  acmod_8h.js  acmod_8h_source.html  annotated.html  bin__mdef_8c_source.html  bin__mdef_8h.html  bin__mdef_8h.js  bin__mdef_8h_source.html  blkarray__list_8c_source.html  blkarray__list_8h_source.html  classes.html  cmdln__macro_8h_source.html  dict2pid_8c.html  dict2pid_8c.js  dict2pid_8c_source.html  dict2pid_8h.html  dict2pid_8h.js  dict2pid_8h_source.html  dict_8c_source.html  dict_8h.html  dict_8h.js  dict_8h_source.html  files.html  files.js  fsg__history_8c_source.html  fsg__history_8h_source.html  fsg__lextree_8c.html  fsg__lextree_8c.js  fsg__lextree_8c_source.html  fsg__lextree_8h_source.html  fsg__search_8c_source.html  fsg__search__internal_8h_source.html  fsg__set_8h.html  fsg__set_8h_source.html  functions.html  functions_0x62.html  functions_0x63.html  (+240 more)
cmu-sphinx/pocketsphinx/doc/latex/: acmod_8c.tex  acmod_8h.tex  annotated.tex  bin__mdef_8h.tex  dict2pid_8c.tex  dict2pid_8h.tex  dict_8h.tex  doxygen.sty  files.tex  fsg__lextree_8c.tex  fsg__set_8h.tex  hmm_8h.tex  index.tex  mdef_8h.tex  ms__gauden_8h.tex  ms__mgau_8h.tex  ms__senone_8h.tex  ngram__search_8c.tex  ngram__search_8h.tex  ngram__search__fwdflat_8c.tex  ngram__search__fwdflat_8h.tex  ngram__search__fwdtree_8c.tex  ngram__search__fwdtree_8h.tex  phone__loop__search_8h.tex  pocketsphinx_8h.tex  pocketsphinx__internal_8h.tex  ps__alignment_8c.tex  ps__alignment_8h.tex  ps__lattice_8c.tex  ps__lattice_8h.tex  ps__lattice__internal_8h.tex  ps__mllr_8c.tex  ps__mllr_8h.tex  ptm__mgau_8h.tex  (+79 more)
cmu-sphinx/pocketsphinx/include/: Makefile
cmu-sphinx/pocketsphinx/model/: Makefile
cmu-sphinx/pocketsphinx/python/: Makefile  filelist.txt  setup.py
cmu-sphinx/pocketsphinx/src/: Makefile
cmu-sphinx/pocketsphinx/test/: Makefile  testfuncs.sh
cmu-sphinx/sphinxbase/: Makefile  config.status  libtool  sphinxbase.pc
cmu-sphinx/sphinxbase/doc/: Makefile  doxytags
cmu-sphinx/sphinxbase/include/: Makefile  config.h
cmu-sphinx/sphinxbase/python/: Makefile  filelist.txt
cmu-sphinx/sphinxbase/src/: Makefile
cmu-sphinx/sphinxbase/test/: Makefile
head-pose-fanelli/: CMakeLists.txt  config.txt  math.hpp  vector_fixed.hpp
kinect-interface/: CMakeLists.txt  kinectInterface.cpp  kinectInterface.h  viewerOpenCV.cpp
real-pdt/: CMakeLists.txt  CMakeLists.txt~  Matrix.h  depthdetector_seg.cpp  depthdetector_seg.h  detector.h  detector_seg.cpp  detector_seg.h  kinectgrabber.h~
real-pdt/config_file/: config_Asus.inp
real-pdt/fovis/: CMakeLists.txt
real-pdt/math/: CMakeLists.txt
real-pdt/segmentation_roi/: CMakeLists.txt  SegmentationROI.cpp  SegmentationROI.h
tools/: StatsToolbox.cpp  StatsToolbox.h
tpso-tracker/: CMakeLists.txt  HeadShoulderObs.h  HeadShoulderState.h  RandomWalk.h  WaveFormObs.h  _dynamics.cpp  _dynamics.h  _observation.cpp  _observation.h  _particle.h  _setting.cpp  _setting.h  _state.h  _trackerpso.cpp  _trackerpso.h
(+938 files in other folders)
